# MLOPs-MOD-HyDE

./: .gitignore  README.md  pyproject.toml
mod_hyde/: Finetune.ipynb
mod_hyde/mod_hyde/: book_preprocessing.py  config.py  database.py  download_utils.py  dspy_rag.py  finetune.py  get_transcripts.py  main_transcripts.py  unstructured_pdf.py
