[tool.poetry]
name = "mod-hyde"
version = "0.1.0"
description = ""
authors = ["Athe-kunal <athekunal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.42.3"
langchain-text-splitters = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
